--- a/unit_1/css/style.css
+++ b/unit_1/css/style.css
@@ -1,8 +1,8 @@
 body {
-    background-color: #008080;
+    background-color: #F0F8FF;
     font-family: helvetica;
 }
 
-h1, p {
-    color: gold;
+h1,h2, p {
+    color: #20B2AA;
 }
