--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -9,7 +9,7 @@ body {
 	font-family: helvetica, sans-serif;
 	font-style: bold;
 	font-size:20px;
-	background-image: url("/Users/brianrawn/Documents/GitHub/rawnb.github.io/unit_3/images/DetroitBW.jpg");
+	background-image: url("rawnb.github.io/unit_3/images/DetroitBW.jpg");
 	background-size:2000px;
 	background-color: black;
 	color: #fff;
