--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -7,7 +7,7 @@ body {
 	
 	text-align: center;
 	font-family: helvetica, sans-serif;
-	font-style: bold;
+	font-weight: bold;
 	font-size:20px;
 	background-image: url(../images/DetroitBW.jpg);
 	background-size:2000px;
